--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1476,10 +1476,37 @@ public class UploadController {
 - 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
 
 - [x] 微服务架构中统一的api管理设计
+
 - [x] swagger2的使用
-- [ ] 通行证
-  - [ ] 短信登录注册
-  - [ ] 短信验证码发送与限制
-  - [ ] 分布式会话
-  - [ ] 用户信息完善，OSS/FastDFS
-  - [ ] AOP日志监控
+
+- [ ] 短信登录注册
+
+- [ ] 短信验证码发送与限制
+
+- [ ] 分布式会话
+
+- [ ] 用户信息完善，OSS/FastDFS
+
+- [x] AOP日志监控
+
+  所有符合包路径下的所有类的所有方法
+
+  ```java
+  @Around("execution(* com.imooc.*.service.impl..*.*(..))")
+  ```
+
+- [x] Cap理论（一致性+可用性+分区容错性）
+
+  无法同时满足CAP
+
+  CP：
+
+  AP：主流，数据的弱一致性 
+
+  CA：单体，不符合分布式应用
+
+- [x] 缓存之双写数据不一致
+
+  解决：缓存双删--在更新数据库之前删一次缓存，数据库更新结束时再次删除缓存，那么不论用户读操作在数据库更新之前到达还是之后到达，都会重新从数据库同步最新的内容。
+
+- [ ] 
