--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1485,8 +1485,6 @@ public class UploadController {
 
 - [ ] 分布式会话
 
-- [ ] 用户信息完善，OSS/FastDFS
-
 - [x] AOP日志监控
 
   所有符合包路径下的所有类的所有方法
@@ -1509,4 +1507,8 @@ public class UploadController {
 
   解决：缓存双删--在更新数据库之前删一次缓存，数据库更新结束时再次删除缓存，那么不论用户读操作在数据库更新之前到达还是之后到达，都会重新从数据库同步最新的内容。
 
-- [ ] 
+- [ ] FastDFS
+
+  
+
+- [ ] OSS
