--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1512,3 +1512,9 @@ public class UploadController {
   
 
 - [ ] OSS
+
+## 2021-06-16记录
+
+- 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
+
+- [ ] 阿里ai文本检测 待学习
