--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1518,3 +1518,17 @@ public class UploadController {
 - 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
 
 - [ ] 阿里ai文本检测 待学习
+
+## 2021-06-17记录
+
+- 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
+
+- [ ] 页面静态化
+
+  便于SEO
+
+  加速用户访问
+
+  降低数据库压力
+
+- [ ] 
