--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1523,7 +1523,7 @@ public class UploadController {
 
 - 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
 
-- [ ] 页面静态化
+- [x] 页面静态化
 
   基本示例：
 
@@ -1573,5 +1573,15 @@ public class UploadController {
   2.加速用户访问
 
   3.降低数据库压力
+
+- [ ] 静态化解耦
+
+  生成html，上传到GriDFS（或FasDFS之类的中间件）中
+
+  获得mongodbFileId，关联数据库相关信息（如文章表）
+
+  调用消费端，下载GriDFS的html进行发布
+
+  ![../](pictures\静态化解耦.png)
 
 - [ ] 
