插入图片测试

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1582,6 +1582,8 @@ public class UploadController {
 
   调用消费端，下载GriDFS的html进行发布
 
-  ![../](https://github.com/dandelionflying/learning/blob/master/pictures/%E9%9D%99%E6%80%81%E5%8C%96%E8%A7%A3%E8%80%A6.png)
+  ![../](https://github.com/dandelionflying/learning/blob/master/pictures/静态化解耦.png)
+
+  [静态化解耦.png](https://github.com/dandelionflying/learning/blob/master/pictures/静态化解耦.png)
 
 - [ ] 
