插入图片测试

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1582,8 +1582,14 @@ public class UploadController {
 
   调用消费端，下载GriDFS的html进行发布
 
-  ![../](https://github.com/dandelionflying/learning/blob/master/pictures/静态化解耦.png)
+  绝对路径：
 
-  [静态化解耦.png](https://github.com/dandelionflying/learning/blob/master/pictures/静态化解耦.png)
+  ![](https://github.com/dandelionflying/learning/blob/master/pictures/静态化解耦.png)
+
+  相对路径：
+
+  ![](pictures/静态化解耦.png)
+
+  fff
 
 - [ ] 
