页面静态化

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1576,20 +1576,66 @@ public class UploadController {
 
 - [ ] 静态化解耦
 
-  生成html，上传到GriDFS（或FasDFS之类的中间件）中
+  生成html，上传到GridFS（或FastDFS之类的分布式文件系统中间件）中
+
+  ```java
+  	@Autowired
+      private GridFSBucket gridFSBucket;
+      // 文章生成HTML
+      public String createArticleHTMLToGridFS(String articleId) throws Exception {
+          Configuration cfg = new Configuration(Configuration.getVersion());
+          String classpath = this.getClass().getResource("/").getPath();
+          cfg.setDirectoryForTemplateLoading(new File(classpath + "templates"));
+          Template template = cfg.getTemplate("detail.ftl", "utf-8");
+          // 获得文章的详情数据
+          ArticleDetailVO detailVO = getArticleDetail(articleId);
+          Map<String, Object> map = new HashMap<>();
+          map.put("articleDetail", detailVO);
+          // 生成html
+          String htmlContent = FreeMarkerTemplateUtils.processTemplateIntoString(template, map);
+  //        System.out.println(htmlContent);
+          InputStream inputStream = IOUtils.toInputStream(htmlContent);
+          // 上传到GridFS 参数：文件名+文件流
+          ObjectId fileId = gridFSBucket.uploadFromStream(detailVO.getId() + ".html",inputStream);
+          return fileId.toString();
+      }
+  ```
 
   获得mongodbFileId，关联数据库相关信息（如文章表）
 
-  调用消费端，下载GriDFS的html进行发布
+  调用消费端（前端服务器），下载GriDFS的html进行发布
 
-  绝对路径：
+  ```java
+      @Autowired
+      private GridFSBucket gridFSBucket;
+  
+      @Value("${freemarker.html.article}")
+      private String articlePath;
+  
+      @Override
+      public Integer download(String articleId, String articleMongoId)
+              throws Exception {
+  
+          // 拼接最终文件的保存的地址
+          String path = articlePath + File.separator + articleId + ".html";
+  
+          // 获取文件流，定义存放的位置和名称
+          File file = new File(path);
+          // 创建输出流
+          OutputStream outputStream = new FileOutputStream(file);
+          // 执行下载
+          gridFSBucket.downloadToStream(new ObjectId(articleMongoId), outputStream);
+  
+          return HttpStatus.OK.value();
+      }
+  ```
 
-  ![](https://github.com/dandelionflying/learning/blob/master/pictures/静态化解耦.png)
+  
 
-  相对路径：
+  > 顺便尝试插入图片（相对路径）：
 
   ![](pictures/静态化解耦.png)
 
-  fff
+  
 
 - [ ] 
