--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1574,7 +1574,7 @@ public class UploadController {
 
   3.降低数据库压力
 
-- [ ] 静态化解耦
+- [x] 静态化解耦
 
   生成html，上传到GridFS（或FastDFS之类的分布式文件系统中间件）中
 
@@ -1635,6 +1635,23 @@ public class UploadController {
   > 顺便尝试插入图片（相对路径）：
 
   ![](pictures/静态化解耦.png)
+
+  
+
+- [ ] rabbitMQ异步解耦
+
+  配置
+
+  ```yaml
+    rabbitmq:
+      host: 192.168.1.204
+      port: 5672
+      username: admin
+      password: admin
+      virtual-host: imooc-news-dev
+  ```
+
+  
 
   
 
