--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1651,7 +1651,40 @@ public class UploadController {
       virtual-host: imooc-news-dev
   ```
 
+  ```java
+  // 定义交换机的名字
+      public static final String EXCHANGE_ARTICLE = "exchange_article";
   
+      // 定义队列的名字
+      public static final String QUEUE_DOWNLOAD_HTML = "queue_download_html";
+  
+      // 创建交换机
+      @Bean(EXCHANGE_ARTICLE)
+      public Exchange exchange(){
+          return ExchangeBuilder
+                  .topicExchange(EXCHANGE_ARTICLE)
+                  .durable(true)
+                  .build();
+      }
+  
+      // 创建队列
+      @Bean(QUEUE_DOWNLOAD_HTML)
+      public Queue queue(){
+          return new Queue(QUEUE_DOWNLOAD_HTML);
+      }
+  
+      // 队列绑定交换机
+      @Bean
+      public Binding binding(
+              @Qualifier(QUEUE_DOWNLOAD_HTML) Queue queue,
+              @Qualifier(EXCHANGE_ARTICLE) Exchange exchange){
+          return BindingBuilder
+                  .bind(queue)
+                  .to(exchange)
+                  .with("article.#.do")
+                  .noargs();      // 执行绑定
+      }
+  ```
 
   
 
