--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1638,6 +1638,10 @@ public class UploadController {
 
   
 
+## 2021-06-18记录
+
+- 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
+
 - [ ] rabbitMQ异步解耦
 
   配置
