路由规则示例，生产消息基础示例

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1685,11 +1685,42 @@ public class UploadController {
           return BindingBuilder
                   .bind(queue)
                   .to(exchange)
-                  .with("article.#.do")
+                  .with("article.#.do")// 路由规则
                   .noargs();      // 执行绑定
+      }
+  ```
+
+  路由规则示例
+
+  ```
+  * RabbitMQ 的路由规则 routing key
+  *  display.*.* -> * 代表一个占位符
+  *      例：
+  *          display.do.download  匹配
+  *          display.do.upload.done   不匹配
+  *
+  * display.# -> # 代表任意多个占位符
+  *      例:
+  *          display.do.download  匹配
+  *          display.do.upload.done.over   匹配
+  ```
+
+  生产者生产消息：
+
+  ```java
+      @Autowired
+      private RabbitTemplate rabbitTemplate;
+  
+      public Object produce() {
+          rabbitTemplate.convertAndSend(
+                  RabbitMQConfig.EXCHANGE_ARTICLE,
+                  "article.publish.download.do",
+                  "1001");
+          return GraceJSONResult.ok();
       }
   ```
 
   
 
 - [ ] 
+
