--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1720,7 +1720,18 @@ public class UploadController {
       }
   ```
 
+  消费
+
+  ```java
+  @RabbitListener(queues = {RabbitMQConfig.QUEUE_DOWNLOAD_HTML})
+  public void watchQueue(String payload, Message message) {
+      System.out.println(payload);
   
+      String routingKey = message.getMessageProperties().getReceivedRoutingKey();
+  }
+  ```
+
+- [ ] 
 
 - [ ] 
 
