--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1731,6 +1731,53 @@ public class UploadController {
   }
   ```
 
+- [ ] rabbitMQ-- 延迟队列
+
+  安装插件
+
+  > https://github.com/rabbitmq/rabbitmq-delayed-message-exchange/releases
+
+  配置
+
+  ```java
+  @Bean(EXCHANGE_DELAY)
+  public Exchange exchange(){
+      return ExchangeBuilder
+              .topicExchange(EXCHANGE_DELAY)
+              .delayed()          // 开启支持延迟消息
+              .durable(true)
+              .build();
+  }
+  ```
+
+  生产延时消息
+
+  ```java
+  @GetMapping("/delay")
+  public Object delay() {
+      MessagePostProcessor messagePostProcessor = new MessagePostProcessor() {
+          @Override
+          public Message postProcessMessage(Message message) throws AmqpException {
+              // 设置消息的持久
+              message.getMessageProperties()
+                      .setDeliveryMode(MessageDeliveryMode.PERSISTENT);
+              // 设置消息延迟的时间，单位ms毫秒
+              message.getMessageProperties()
+                      .setDelay(5000);
+              return message;
+          }
+      };
+      rabbitTemplate.convertAndSend(
+              RabbitMQDelayConfig.EXCHANGE_DELAY,
+              "delay.demo",
+              "这是一条延迟消息~~",
+              messagePostProcessor);
+      return "OK";
+  }
+  ```
+
+  
+
 - [ ] 
 
 - [ ] 
