web项目架构演变

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1,3 +1,5 @@
+
+
 ## 2020年7月8日
 
 结束c#基础学习（高级编程除外），开始u3d基础学习,b站香槟堡伯爵讲课过于拖沓，考虑更换视频
@@ -1642,7 +1644,7 @@ public class UploadController {
 
 - 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
 
-- [ ] rabbitMQ异步解耦
+- [x] rabbitMQ异步解耦
 
   配置
 
@@ -1731,7 +1733,7 @@ public class UploadController {
   }
   ```
 
-- [ ] rabbitMQ-- 延迟队列
+- [x] rabbitMQ-- 延迟队列
 
   安装插件
 
@@ -1778,7 +1780,43 @@ public class UploadController {
 
   
 
-- [ ] 
+- [ ] web项目架构演变
+
+  单体
+
+  ![](pictures/架构演变1--单体.png)
+
+  
+
+  垂直
+
+  ![](pictures/架构演变2--垂直应用架构.png)
+
+  
+
+  soa
+
+  ![](pictures/架构演变3--分布式SOA.png)
+
+  
+
+  微服务
+
+  ![](pictures/架构演变4--微服务架构.png)
+
+  
+
+  
+
+  
+
+  
+
+  
+
+  
+
+  
 
 - [ ] 
 
