--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1780,7 +1780,7 @@ public class UploadController {
 
   
 
-- [ ] web项目架构演变
+- [x] web项目架构演变
 
   单体
 
@@ -1808,11 +1808,63 @@ public class UploadController {
 
   
 
-  
+- [ ] Eureka配置
 
-  
+  server:
 
-  
+  ```yaml
+  eureka:
+    instance:
+      # eureka 实例的hostname，可以是hostname，也可以自定义配置hostname
+      hostname: eureka
+    client:
+      # 是否要把当前的eureka server注册到自己
+      register-with-eureka: false
+      # 从注册中心获得检索服务实例，server没有必要，直接false即可
+      fetch-registry: false
+      # 单实例配置自己的服务地址，高可用集群则配置多个地址
+      service-url:
+        defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    server:
+      enable-self-preservation: false   # 关闭eureka的自我保护功能
+      eviction-interval-timer-in-ms: 5000   # 清理无效节点的时间，可以缩短为5s，默认60s
+  ```
+
+  ```xml
+  <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+  </dependency>
+  ```
+
+  client:
+
+  ```yaml
+  eureka:
+    # 自定义eureka server的信息
+    server:
+      hostname: eureka
+      port: 7000
+    client:
+      # 所有的微服务都必须注册到eureka中
+      register-with-eureka: true
+      # 从注册中心获得检索服务实例
+      fetch-registry: true
+      # 注册中心的服务地址
+      service-url:
+  #      defaultZone: http://${eureka.server.hostname}:${eureka.server.port}/eureka/
+        defaultZone: http://eureka-cluster-7001:7001/eureka/,http://eureka-cluster-7002:7002/eureka/,http://eureka-cluster-7003:7003/eureka/
+    instance:
+      lease-renewal-interval-in-seconds: 3      # 调整微服务（eureka client）和注册中心（eureka server）的心跳时间
+      lease-expiration-duration-in-seconds: 5   # eureka 举例最近的一次心跳等待提出的时间，默认90s
+  ```
+
+  ```xml
+  <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+  </dependency>
+  ```
 
   
 
