--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1808,7 +1808,7 @@ public class UploadController {
 
   
 
-- [ ] Eureka配置
+- [x] Eureka配置
 
   server:
 
@@ -1867,6 +1867,10 @@ public class UploadController {
   ```
 
   
+
+  
+
+- [ ] 服务间通信
 
   
 
