服务间通信方式1：discoveryClient + restTemplate

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1868,11 +1868,42 @@ public class UploadController {
 
   
 
-  
+## 2021-06-21记录
+
+- 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
 
 - [ ] 服务间通信
 
-  
+
+```java
+// 方式1：使用discoveryClient根据服务名称获取主机名及端口号
+
+// 注入服务发现，可以获得已经注册的服务相关信息
+@Autowired
+private DiscoveryClient discoveryClient;
+
+func(){
+    
+    String serviceId = "SERVICE-USER";
+    List<ServiceInstance> instanceList = discoveryClient.getInstances(serviceId);
+    ServiceInstance userService = instanceList.get(0);
+    String userServerUrlExecute
+                = "http://" + userService.getHost() +
+                ":"
+                + userService.getPort()
+                + "/user/queryByIds?userIds=" + JsonUtils.objectToJson(idSet);
+	ResponseEntity<GraceJSONResult> responseEntity
+                = restTemplate.getForEntity(userServerUrlExecute, GraceJSONResult.class);
+    GraceJSONResult bodyResult = responseEntity.getBody();      
+}
+
+// 方式2
+
+```
+
+
+
+
 
 - [ ] 
 
