微服务注册到eureka集群

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1933,7 +1933,15 @@ eureka:
     eviction-interval-timer-in-ms: 5000   
 ```
 
+- [x] 微服务注册到eureka集群
 
+  将所有eureka集群的地址添加到 **eureka.client.service-url.defaultZone** 中
+
+  ```yaml
+      service-url:
+  #      defaultZone: http://${eureka.server.hostname}:${eureka.server.port}/eureka/
+        defaultZone: http://eureka-cluster-7001:7001/eureka/,http://eureka-cluster-7002:7002/eureka/,http://eureka-cluster-7003:7003/eureka/
+  ```
 
 
 
