构建微服务集群

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1943,5 +1943,16 @@ eureka:
         defaultZone: http://eureka-cluster-7001:7001/eureka/,http://eureka-cluster-7002:7002/eureka/,http://eureka-cluster-7003:7003/eureka/
   ```
 
+- [x] 构建微服务集群
+
+  只需改成动态端口配置
+
+  ```yaml
+  server:
+    port: ${port:8003}
+  ```
+
+- [ ] 
+
 
 
