服务间通信方式2：在restTemplate配置类中增加@LoadBalanced(默认轮询)

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1881,6 +1881,8 @@ public class UploadController {
 // 注入服务发现，可以获得已经注册的服务相关信息
 @Autowired
 private DiscoveryClient discoveryClient;
+@Autowired
+private RestTemplate restTemplate;
 
 func(){
     
@@ -1897,7 +1899,28 @@ func(){
     GraceJSONResult bodyResult = responseEntity.getBody();      
 }
 
-// 方式2
+// 方式2:在restTemplate配置类中增加@LoadBalanced，默认轮询
+@Configuration
+public class CloudConfig {
+    /**
+     * 会基于OKHttp3的配置来配置RestTemplate
+     * @return
+     */
+    @Bean
+    @LoadBalanced       // 默认的负载均衡算法：轮询
+    public RestTemplate restTemplate() {
+        return new RestTemplate(new OkHttp3ClientHttpRequestFactory());
+    }
+}
+
+
+func2(){
+    String userServerUrlExecute
+               = "http://" + serviceId + "/user/queryByIds?userIds=" + JsonUtils.objectToJson(idSet);
+    ResponseEntity<GraceJSONResult> responseEntity
+                = restTemplate.getForEntity(userServerUrlExecute, GraceJSONResult.class);
+    GraceJSONResult bodyResult = responseEntity.getBody(); 
+}
 
 ```
 
