基于客户端的负载均衡--ribbon--配置

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1975,6 +1975,30 @@ eureka:
     port: ${port:8003}
   ```
 
+
+## 2021-06-21记录
+
+- 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
+
+- [ ] 基于客户端的负载均衡--ribbon
+
+  启动类配置
+
+  ```java
+  @RibbonClient(name = "SERVICE-USER", configuration = MyRule.class)
+  ```
+
+  当前的ribbonClient发送请求到name时，使用configuration配置的负载均衡机制
+
+  或 配置在yml中：
+
+  ```yaml
+  # 配置指定自定义的ribbon规则
+  SERVICE-USER:
+    ribbon:
+      NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
+  ```
+
 - [ ] 
 
 
