--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -1924,7 +1924,44 @@ func2(){
 
 ```
 
+```java
+// 方式3：feign方式
+// 启动类配置--调用端
+@EnableFeignClients({"com.imooc"})
 
+// controller配置--被调用端
+@FeignClient(value = MyServiceList.SERVICE_USER, fallbackFactory = UserControllerFactoryFallback.class) value = "application里配置的servicename"
+    
+// 使用
+
+func3(){
+    GraceJSONResult bodyResult = userControllerApi.queryByIds(JsonUtils.objectToJson(idSet));
+    
+}
+
+@Api(value = "用户信息相关Controller", tags = {"用户信息相关Controller"})
+@RequestMapping("user")
+@FeignClient(value = MyServiceList.SERVICE_USER, fallbackFactory = UserControllerFactoryFallback.class)
+public interface UserControllerApi {
+        @ApiOperation(value = "根据用户的ids查询用户列表", notes = "根据用户的ids查询用户列表", httpMethod = "GET")
+    @GetMapping("/queryByIds")
+    public GraceJSONResult queryByIds(@RequestParam String userIds);
+}
+    
+```
+
+
+
+feign
+
+```xml
+<dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-openfeign</artifactId>
+</dependency>
+```
+
+声明式http工具
 
 
 
@@ -1980,7 +2017,7 @@ eureka:
 
 - 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
 
-- [ ] 基于客户端的负载均衡--ribbon
+- [x] 基于客户端的负载均衡--ribbon
 
   启动类配置
 
