微服务链路问题--hystrix（熔断器）--配置

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2057,5 +2057,46 @@ eureka:
     # 如果当前重试失败1次，则会切换到访问集群中的下一个微服务实例，切换最大为2次
   ```
 
+## 2021-06-23记录
 
+- 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
+
+- [ ] 微服务链路问题--hystrix（熔断器）--提供容错机制，避免微服务系统雪崩
+
+  配置
+
+  ```xml
+  // 依赖
+  <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+  </dependency>
+  ```
+
+  ```java
+  // 启动类
+  @EnableCircuitBreaker   // 开启hystrix的熔断机制
+  ```
+
+  ```yaml
+  # 配置hystrix
+  hystrix:
+    command:
+      default:
+        execution:
+          isolation:
+            thread:
+              timeoutInMilliseconds: 2000   # 设置hystrix超时时间，超过2秒触发降级
+  ```
+
+  熔断降级
+
+  ```java
+  @HystrixCommand(fallbackMethod = "queryByIdsFallback")
+  
+  ```
+
+  
+
+  
 
