--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2096,6 +2096,16 @@ eureka:
   
   ```
 
+  全局降级
+
+  ```java
+  // controller配置
+  @DefaultProperties(defaultFallback = "defaultFallback")
+  
+  // 方法注解
+  @HystrixCommand // 这里就不用指明方法名了
+  ```
+
   
 
   
