服务调用者降级 基于Feign客户端配置

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2106,7 +2106,36 @@ eureka:
   @HystrixCommand // 这里就不用指明方法名了
   ```
 
-  
+  服务调用者降级
 
+  ```yaml
+  feign:
+    hystrix:
+      enabled: true   # 打开feign客户端的内置hystrix
+  ```
+
+  ```java
+  // 1.在配调用端配置 fallbackFactory
+  @FeignClient(value = MyServiceList.SERVICE_USER, fallbackFactory = UserControllerFactoryFallback.class)
+  // 2.自定义一个类，用来处理当前被调用端controller的所有方法的降级
+  // eg:
+  @Component
+  public class UserControllerFactoryFallback implements FallbackFactory<UserControllerApi> {
+      @Override
+      public UserControllerApi create(Throwable throwable) {
+          return new UserControllerApi() {
+              @Override
+              public GraceJSONResult getUserInfo(String userId) {
+                  return GraceJSONResult.errorCustom(ResponseStatusEnum.SYSTEM_ERROR_FEIGN);
+              @Override
+              public GraceJSONResult queryByIds(String userIds) {
+                  System.out.println("进入客户端（服务调用者）的降级方法");
+                  List<AppUserVO> publisherList = new ArrayList<>();
+                  return GraceJSONResult.ok(publisherList);
+              }
+          };
+      }
+  }
   
+  ```
 
