服务降级规则配置

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2061,7 +2061,7 @@ eureka:
 
 - 《Spring Cloud分布式微服务实战，养成应对复杂业务的综合技术能力》
 
-- [ ] 微服务链路问题--hystrix（熔断器）--提供容错机制，避免微服务系统雪崩
+- [x] 微服务链路问题--hystrix（熔断器）--提供容错机制，避免微服务系统雪崩
 
   ![](pictures/熔断器工作原理.png)
 
@@ -2140,4 +2140,17 @@ eureka:
   }
   
   ```
+
+服务降级规则配置
+
+```yaml
+hystrix:
+  command:
+    default:
+      circuitBreaker:   # 配置断路器
+        enabled: true
+        requestVolumeThreshold: 10    # 触发熔断最小请求次数，默认：20
+        sleepWindowInMilliseconds: 15000    # 熔断后过几秒后尝试半开状态（请求重试），默认：5s
+        errorThresholdPercentage: 50  # 触发熔断的失败率（异常率/阈值），默认：50
+```
 
