--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2154,5 +2154,24 @@ eureka:
           errorThresholdPercentage: 50  # 触发熔断的失败率（异常率/阈值），默认：50
   ```
 
+- [ ] 微服务网关Zuul
+
+  初始化
+
+  ```xml
+  // 依赖
+  <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+  </dependency>
+  ```
+
+  ```java
+  // 网关微服务启动类配置
+  //@EnableZuulServer
+  @EnableZuulProxy       // @EnableZuulProxy是@EnableZuulServer的一个增强升级版，当zuul和eureka、ribbon等组件共同使用，则使用增强版即可
+  // 
+  ```
+
   
 
