微服务网关Zuul--配置路由

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2168,10 +2168,28 @@ eureka:
 
   ```java
   // 网关微服务启动类配置
+  @EnableEurekaClient
   //@EnableZuulServer
   @EnableZuulProxy       // @EnableZuulProxy是@EnableZuulServer的一个增强升级版，当zuul和eureka、ribbon等组件共同使用，则使用增强版即可
   // 
   ```
+
+  配置路由
+
+  ```yaml
+  # 路由规则: http://[网关地址]:[端口号]/[prefix]/[微服务实例id]/[请求地址路径]
+  zuul:
+    routes:
+      # 由于路由id和微服务实例id相同，我们可以简化转发的配置
+      service-article: /service-article/**
+    #    service-article:                  # 配置微服务的路由id，微服务的实例id
+  #      path: /service-article/**       # 请求路径(前缀)
+  #      service-id: service-article     # 请求转发的微服务实例id
+  #      url: http://192.168.1.2:8001    # 请求转发到指定的微服务所在的ip地址
+    prefix: /api                        # 请求前缀
+  ```
+
+  **需要结合eureka做服务发现，所以eureka客户端配置也要加上**
 
   
 
