--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2191,5 +2191,57 @@ eureka:
 
   **需要结合eureka做服务发现，所以eureka客户端配置也要加上**
 
+  网关过滤器
+
+  ```java
+  /**
+   * 构建zuul的自定义过滤器
+   */
+  @Component
+  public class MyFilter extends ZuulFilter {
+      /**
+       * 定义过滤器的类型
+       *      pre：    在请求被路由之前执行
+       *      route：  在路由请求的时候执行
+       *      post：   请求路由以后执行
+       *      error：  处理请求时发生错误的时候执行
+       * @return
+       */
+      @Override
+      public String filterType() {
+          return "pre";
+      }
+      /**
+       * 过滤器执行的顺序，配置多个有顺序的过滤
+       * 执行顺序从小到大
+       * @return
+       */
+      @Override
+      public int filterOrder() {
+          return 1;
+      }
+      /**
+       * 是否开启过滤器
+       *      true：开启
+       *      false：禁用
+       * @return
+       */
+      @Override
+      public boolean shouldFilter() {
+          return true;
+      }
+      /**
+       * 过滤器的业务实现
+       * @return
+       * @throws ZuulException
+       */
+      @Override
+      public Object run() throws ZuulException {
+          System.out.println("display pre zuul filter...");
+          return null;    // 没有意义可以不用管。
+      }
+  }
+  ```
+
   
 
