分布式配置中心基本配置

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2333,4 +2333,50 @@ eureka:
   }
   ```
 
-  
+- [ ] 分布式配置中心
+
+  基本配置--server
+
+  ```xml
+  <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-config-server</artifactId>
+  </dependency>
+  ```
+
+  ```yaml
+  spring:
+    cloud:
+      config:
+        server:
+          git:
+            uri: https://github.com/leechenxiang/imooc-news-config.git #存放配置文件的远程仓库
+  ```
+
+  ```java
+  // 启动类配置
+  @EnableEurekaClient
+  @EnableConfigServer
+  ```
+
+  基本配置--client(zuul-server微服务)
+
+  ```xml
+  <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-config</artifactId>
+  </dependency>
+  ```
+
+  ```yaml
+  spring:  
+    cloud:
+      config:
+        label: master
+        name: zuul
+        profile: prod
+  #      uri: http://192.168.1.2:7080
+        discovery:
+          enabled: true
+          service-id: springcloud-config
+  ```
