动态刷新git配置

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2333,7 +2333,7 @@ eureka:
   }
   ```
 
-- [ ] 分布式配置中心
+- [x] 分布式配置中心
 
   基本配置--server
 
@@ -2359,7 +2359,7 @@ eureka:
   @EnableConfigServer
   ```
 
-  基本配置--client(zuul-server微服务)
+  基本配置--client(以zuul-server微服务示例)
 
   ```xml
   <dependency>
@@ -2380,3 +2380,33 @@ eureka:
           enabled: true
           service-id: springcloud-config
   ```
+
+  动态刷新git配置
+
+  ```xml
+  <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+  </dependency>
+  ```
+
+  ```java
+  // ZuulFilter中增加注解
+  @RefreshScope
+  ```
+
+  ```yaml
+  # 配置动态刷新git配置的路径终端请求地址
+  management:
+    endpoints:
+      web:
+        exposure:
+          include: refresh
+  ```
+
+  > 请求刷新
+  >
+  > http://ip:port/actuator/refresh
+
+  
+
