springcloud bus -- 消息总线 批量/定向更新微服务配置

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2406,7 +2406,46 @@ eureka:
 
   > 请求刷新
   >
-  > http://ip:port/actuator/refresh
+  > http://ip:port/actuator/bus-refresh
+
+- [x] springcloud bus -- 消息总线
 
   
 
+  ```xml
+  <!-- springcloudConfig微服务及其他普通微服务（消息接受端）均需要引入-->
+  <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+  </dependency>
+  ```
+
+  ```yaml
+  # springcloudConfig微服务及其他普通微服务（消息接受端）均需要配置
+  spring:
+      rabbitmq:
+        host: 192.168.1.204
+        port: 5672
+        username: admin
+        password: admin
+        virtual-host: imooc-news-dev
+  ```
+
+  ```yaml
+  # 配置动态刷新git配置的路径终端请求地址
+  management:
+    endpoints:
+      web:
+        exposure:
+          include: "*"
+  ```
+
+  > 请求刷新(只需向config微服务发送刷新请求，其余消费端即可更新)
+  >
+  > http://ip:port/actuator/bus-refresh
+
+  也可定向刷新：
+
+  > 请求刷新
+  >
+  > http://ip:port/actuator/bus-refresh/微服务实例id:端口
