--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2449,3 +2449,15 @@ eureka:
   > 请求刷新
   >
   > http://ip:port/actuator/bus-refresh/微服务实例id:端口
+
+- [ ] 消息驱动--springcloud Stream(待看)
+- [ ] zipkin+sleuth(待看)
+
+
+
+**小阶段summary：过了一遍mk Spring Cloud分布式微服务实战**
+
+
+
+
+
