官方示例数据库使用

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2566,3 +2566,29 @@ systemctl status clickhouse-server.service
 启动正常
 
 ![](pictures/clickhouse启动2.png)
+
+3.示例数据库使用
+
+下载并提取表数据[ ](https://clickhouse.tech/docs/zh/getting-started/tutorial/#download-and-extract-table-data)
+
+```
+curl https://datasets.clickhouse.tech/hits/tsv/hits_v1.tsv.xz | unxz --threads=`nproc` > hits_v1.tsv
+curl https://datasets.clickhouse.tech/visits/tsv/visits_v1.tsv.xz | unxz --threads=`nproc` > visits_v1.tsv
+```
+
+创建表[ ](https://clickhouse.tech/docs/zh/getting-started/tutorial/#create-tables)
+
+与大多数数据库管理系统一样，ClickHouse在逻辑上将表分组为数据库。包含一个`default`数据库，但我们将创建一个新的数据库`tutorial`:
+
+```
+clickhouse-client --query "CREATE DATABASE IF NOT EXISTS tutorial"
+```
+
+创建数据库失败，官方示例数据库sql有问题
+
+
+
+有点困，暂停。。。。
+
+![](pictures/clickhouseError.png)
+
