--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2589,3 +2589,26 @@ clickhouse-client --query "CREATE DATABASE IF NOT EXISTS tutorial"
 ![](pictures/clickhouseError.png)
 
 有点困，暂停。。。。
+
+
+
+> 使用springboot中@EnableScheduling注解编写定时任务
+>
+> 定时获取基金信息遇到使用gson将json字符串转为实体对象时 时间格式转换失败，暂时没处理，记得要处理。
+
+```java
+@Configuration      
+@EnableScheduling
+public class FundTask {
+    @Autowired
+    private FundService service;
+    @Scheduled(cron = "0/10 * * * * ?")
+    private void configureTasks() {
+        service.print();
+        System.err.println("||");
+        System.err.println("||");
+        System.err.println("||");
+    }
+}
+```
+
