解决官方示例建表语句报错问题

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2612,3 +2612,17 @@ public class FundTask {
 }
 ```
 
+
+
+## 2021-06-28记录
+
+clickHouse
+
+接昨天内容继续：解决clickhouse建表语法错误问题
+
+官网的示例中字段名使用  **`** 包裹，实际不需要（单双引号也不需要），而且，页面复制过来的语句每行末尾包含了换行符，在clickclient中直接跑会识别出换行符导致语句被错误分段执行，导致报错，需要在其他工具中把换行符替换成空格。
+
+结果成功：
+
+![](pictures/clickhouseCreateTable.png)
+
