导入官方示例数据

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2626,3 +2626,25 @@ clickHouse
 
 ![](pictures/clickhouseCreateTable.png)
 
+4.导入示例数据
+
+数据导入到ClickHouse是通过[INSERT INTO](https://clickhouse.tech/docs/zh/sql-reference/statements/insert-into/)方式完成的，查询类似许多SQL数据库。然而，数据通常是在一个提供[支持序列化格式](https://clickhouse.tech/docs/zh/interfaces/formats/)而不是`VALUES`子句（也支持）。
+
+我们之前下载的文件是以制表符分隔的格式，所以这里是如何通过控制台客户端导入它们:
+
+```
+clickhouse-client --query "INSERT INTO tutorial.hits_v1 FORMAT TSV" --max_insert_block_size=100000 < hits_v1.tsv
+clickhouse-client --query "INSERT INTO tutorial.visits_v1 FORMAT TSV" --max_insert_block_size=100000 < visits_v1.tsv
+```
+
+> ClickHouse有很多[要调整的设置](https://clickhouse.tech/docs/zh/operations/settings/)在控制台客户端中指定它们的一种方法是通过参数，就像我们看到上面语句中的`--max_insert_block_size`。找出可用的设置、含义及其默认值的最简单方法是查询`system.settings` 表:
+>
+> ```
+> SELECT name, value, changed, description
+> FROM system.settings
+> WHERE name LIKE '%max_insert_b%'
+> FORMAT TSV
+> 
+> max_insert_block_size    1048576    0    "The maximum block size for insertion, if we control the creation of blocks for insertion."
+> ```
+
