--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -263,7 +263,7 @@ zookeeper应用场景、选举机制、数据模型
   tail -200f nohup.out
   ```
   
-
+  
   
   - 分布式扩展
   
@@ -2647,4 +2647,45 @@ clickhouse-client --query "INSERT INTO tutorial.visits_v1 FORMAT TSV" --max_inse
 > 
 > max_insert_block_size    1048576    0    "The maximum block size for insertion, if we control the creation of blocks for insertion."
 > ```
+
+## 2021-07-03记录
+
+《笑傲java面试：面霸修炼手册》
+
+java8steam
+
+1.为一组序列提供顺序、并行运算
+
+> 流：随时间产生的数据序列
+
+​	1）支持函数式编程
+
+​	2）提供管道运算能力（**一个计算过程的输出作为另一个计算过程的输入**）
+
+​	3）提供并行parallel计算能力
+
+​	4）提供大量的操作
+
+2.提供流计算
+
+![](pictures/管道（pipeline）.png)
+
+
+
+​	1）操作：
+​		（1）状态：
+
+​			a.有状态：sorted skip limit 任何处罚状态变化的程序
+
+​			b.无状态：map reduce
+
+​		（2）副作用：
+
+​			a.纯函数:没有副作用的函数
+
+​			b.非纯函数
+
+> lambda表达式：相当于一种匿名的函数
+
+3.提供并发计算
 
