使用流时 涉及基本数据类型 在.collect()之前加上.boxed()

--- a/一些奇奇怪怪的小知识.md
+++ b/一些奇奇怪怪的小知识.md
@@ -4,3 +4,12 @@ int可以这样定义：
 int data = 1_000_000;
 ```
 
+使用流计算时，针对基本数据类型，一般要加上 **.boxed()** 意为装箱--即把基本类型元素装箱为对象
+
+```java
+var list = IntStream.range(0, 1_000_000)
+    .map(x -> r.nextInt(10_000_000))
+    .boxed()
+    .collect(Collectors.toList());
+```
+
