函数式基本概念

--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2697,7 +2697,7 @@ java8steam
 
 3.提供并发计算
 
-![image-20210705163506054](D:/zzx/codes/learning/pictures/并发计算流程.png)
+![并发计算流程.png](pictures/并发计算流程.png)
 
 4.函数式基本概念
 
