--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2703,3 +2703,36 @@ java8steam
 
 ![函数式基本概念.png](pictures/函数式基本概念.png)
 
+## 2021-07-06记录
+
+《笑傲java面试：面霸修炼手册》
+
+java8steam
+
+5.monad
+
+> 一个自函子范畴的一个幺半群
+>
+> 自函子
+
+（1）monada设计模式特点
+
+- 一个泛型的构造函数，如Optional<T>
+- 不改变泛型类型的运算操作，内部是非泛型计算
+
+> **例：可以改变其中的数据类型，但不能改变本身的Stream类型**
+>
+> ```java
+> // Stream<String>
+> var result = Stream.of("Hello", "World")
+>         .map(String::length);
+> ```
+
+> 一个比较不错的例子
+>
+> https://www.jdon.com/idea/java8-monad.html
+
+- 泛型类型不变。
+
+> 比如可以使Optional<Integer>到Optional<String> 但还是Optional<T>
+
