一些奇奇怪怪的小知识.md

--- a/一些奇奇怪怪的小知识.md
+++ b/一些奇奇怪怪的小知识.md
@@ -13,3 +13,10 @@ var list = IntStream.range(0, 1_000_000)
     .collect(Collectors.toList());
 ```
 
+BufferedOutputStream默认缓冲区大小为8192（8*1024）
+
+```java
+public BufferedOutputStream(OutputStream out) {
+    this(out, 8192);
+}
+```
