--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -2739,7 +2739,7 @@ java8steam
 
 《笑傲java面试：面霸修炼手册》
 
-java8steam
+一、java8steam
 
 （2）使用monada基本流程
 
@@ -2821,4 +2821,48 @@ public class Event<T>{
   - 封闭性：相同的群通过某种方式结合到一起群不变
   - 结合律：多个自函子操作后的结果与自函子顺序无关
   - 单位元：
+
+二、buffer
+
+常见面试题
+
+- 缓冲区是不是流？
+- 缓冲区的几种操作含义：flip/rewind/clear?
+- 缓冲区设置多大？
+- NIO的Channel比缓冲区快吗？ 
+- 缓冲过程中，中文乱码如何处理？
+
+```java
+@Test
+public void test_chinese(){
+    var raw = "长坂桥头杀气生，横枪立马眼圆睁。一声好似轰雷震，独退曹家百万兵。";
+    var charset = StandardCharsets.UTF_8;
+    var bytes = charset.encode(raw).array();
+    var bytes2 = Arrays.copyOfRange(bytes, 0, 11);
+
+    var bbuf = ByteBuffer.allocate(12);
+    var cbuf = CharBuffer.allocate(12);
+
+    bbuf.put(bytes2);
+    bbuf.flip();
+
+    charset.newDecoder().decode(bbuf, cbuf, true);
+    cbuf.flip();
+
+    var tmp = new char[cbuf.length()];
+    if(cbuf.hasRemaining()){
+        cbuf.get(tmp);
+        System.out.println("here:" + new String(tmp));
+    }
+    System.out.format("limit-pos=%d\n", bbuf.limit() - bbuf.position());
+    Arrays.copyOfRange(bbuf.array(), bbuf.position(), bbuf.limit());
+}
+```
+
+- 并发分析数据更快吗?
+- 计算一个大文件的词频(coding)？
+
+
+
+
 
