若要使用最新版本的jdk要看当前版本的编译器支持的jdk版本

--- a/一些奇奇怪怪的小知识.md
+++ b/一些奇奇怪怪的小知识.md
@@ -20,3 +20,7 @@ public BufferedOutputStream(OutputStream out) {
     this(out, 8192);
 }
 ```
+
+若要使用最新版本的jdk要看当前版本的编译器支持的jdk版本
+
+![](pictures\当前idea支持的jdk版本.png)
