mvn构建项目忽略单元测试

--- a/一些奇奇怪怪的小知识.md
+++ b/一些奇奇怪怪的小知识.md
@@ -24,3 +24,10 @@ public BufferedOutputStream(OutputStream out) {
 若要使用最新版本的jdk要看当前版本的编译器支持的jdk版本
 
 ![](pictures\当前idea支持的jdk版本.png)
+
+mvn构建时忽略单元测试
+
+```
+mvn clean install -DskipTests
+```
+
