@Autowired 和 @Resource的区别--装配方式不同

--- a/一些奇奇怪怪的小知识.md
+++ b/一些奇奇怪怪的小知识.md
@@ -1,10 +1,10 @@
-int可以这样定义：
+（1）int可以这样定义：
 
 ```java
 int data = 1_000_000;
 ```
 
-使用流计算时，针对基本数据类型，一般要加上 **.boxed()** 意为装箱--即把基本类型元素装箱为对象
+（2）使用流计算时，针对基本数据类型，一般要加上 **.boxed()** 意为装箱--即把基本类型元素装箱为对象
 
 ```java
 var list = IntStream.range(0, 1_000_000)
@@ -13,7 +13,7 @@ var list = IntStream.range(0, 1_000_000)
     .collect(Collectors.toList());
 ```
 
-BufferedOutputStream默认缓冲区大小为8192（8*1024）
+（3）BufferedOutputStream默认缓冲区大小为8192（8*1024）
 
 ```java
 public BufferedOutputStream(OutputStream out) {
@@ -21,13 +21,94 @@ public BufferedOutputStream(OutputStream out) {
 }
 ```
 
-若要使用最新版本的jdk要看当前版本的编译器支持的jdk版本
+（4）若要使用最新版本的jdk要看当前版本的编译器支持的jdk版本
 
 ![](pictures\当前idea支持的jdk版本.png)
 
-mvn构建时忽略单元测试
+（5）mvn构建时忽略单元测试
 
 ```
 mvn clean install -DskipTests
 ```
 
+（6）@Autowired 和 @Resource的区别
+
+参考：
+
+> https://blog.csdn.net/weixin_40423597/article/details/80643990
+
+比较直观的一个区别：**装配方式不同** autowired是bytype，resource是by name
+
+啥意思呢，比如按一下方式注入两个来自同一个类的bean：
+
+```java
+@SpringBootApplication
+public class LearningApplication {
+	······
+    @Bean
+    public User user1(){
+        return new User("user1");
+    }
+    @Bean
+    public User user2(){
+        return new User("user2");
+    }
+}
+```
+
+这时候使用autowired注解报错如下
+
+```
+Field user in XXX.AutowiredAndResourceService required a single bean, but 2 were found:
+	- user1: defined by method 'user1' in cn.running4light.learning.LearningApplication
+	- user2: defined by method 'user2' in cn.running4light.learning.LearningApplication
+
+Action:
+Consider marking one of the beans as @Primary, updating the consumer to accept multiple beans, or using @Qualifier to identify the bean that should be consumed
+```
+
+使用Autowired注解时，spring容器依据类型找到了两个User类型的bean实例而无法选择哪一个
+
+解决办法：
+
+1. 可以在其中一个bean上加@Primary注解。
+2. 结合@Qualifier注解指定name
+
+**事实上，编译时就会报错**
+
+使用@Resource注解时，
+
+首先根据@Resource指定的name，若无此名称的bean则**编译报错**；
+
+其次，没有指定name时会根据字段名寻找，**此时编译期不会报错，运行时报错**；
+
+最后才是ByType，这时如果有多个同类型的bean，**编译期不会报错，运行时报错**：
+
+```
+expected single matching bean but found 2: user1,user2
+```
+
+使用@Resource注解可以通过name来指定获取哪个bean的示例：
+
+```java
+@Autowired
+@Qualifier("user1")
+private User user;
+@Resource(name = "user1")
+private User user1;
+@Resource(name = "user2")
+private User user2;
+@Resource
+private User user3;
+
+public void func(){
+    System.err.println(user1.getName());// 输出user1
+    System.err.println(user2.getName());// 输出user2
+    System.err.println(user.getName());// 输出user1
+    System.err.println(user3.getName());// 运行时报错
+}
+```
+
+
+
+api first与schema first（待看）
