--- a/一些奇奇怪怪的小知识.md
+++ b/一些奇奇怪怪的小知识.md
@@ -109,6 +109,23 @@ public void func(){
 }
 ```
 
+（7）yaml报错
+
+```
+org.yaml.snakeyaml.error.YAMLException: java.nio.charset.MalformedInputException: Input length = 2
+```
+
+从别的地方拉取的代码，文件格式可能与当前项目的格式不统一，需要设置统一的文件编码格式，同时对于已出错的文件，格式转换错误已是既定事实，故需要重新见一个文件，复制内容到新的文件，至此，问题解决。
+
+> Settings--Editor--File Encodings
+
+![](pictures\项目编码格式设置.png)
+
+
+
 
 
 api first与schema first（待看）
+
+
+
