入nacos服务发现组件启动报错

--- a/各种报错汇总.md
+++ b/各种报错汇总.md
@@ -30,3 +30,8 @@ Fatal error compiling: 无效的目标发行版: 13
 
 spring-boot-maven-plugin不负责编译，替换成**maven-compiler-plugin**之后 依次执行clean--compile--install，不再报错。
 
+**（2）Error creating bean with name 'configurationPropertiesBeans' defined in class path resource**
+
+引入nacos服务发现组件启动报错
+
+疑是与springcloud或springboot的版本不能兼容，将sprngboot版本调低至2.2.6.RELEASE，`spring-cloud-starter-alibaba-nacos-discovery`版本设为**2.2.5.RELEASE** ，问题解决。
