github图片没显示 调整图片显示方式

--- a/一些奇奇怪怪的小知识.md
+++ b/一些奇奇怪怪的小知识.md
@@ -23,7 +23,7 @@ public BufferedOutputStream(OutputStream out) {
 
 （4）若要使用最新版本的jdk要看当前版本的编译器支持的jdk版本
 
-![](pictures\当前idea支持的jdk版本.png)
+<img src="pictures\当前idea支持的jdk版本.png">"
 
 （5）mvn构建时忽略单元测试
 
@@ -119,7 +119,7 @@ org.yaml.snakeyaml.error.YAMLException: java.nio.charset.MalformedInputException
 
 > Settings--Editor--File Encodings
 
-![](pictures\项目编码格式设置.png)
+<img src="pictures\项目编码格式设置.png">"
 
 
 
