--- a/各种报错汇总.md
+++ b/各种报错汇总.md
@@ -2,7 +2,7 @@
 
 首先，若要使用新版本的jdk要看当前版本的编译器支持的jdk版本
 
-![](pictures\当前idea支持的jdk版本.png)
+<img src="pictures\当前idea支持的jdk版本.png">"
 
 大多数情况下上述能够解决运行项目显示“**无效的目标发行版**”问题，编译器编译可以通过。但如果要使用mvninstall的话，会报错：
 
