--- a/学习流程记录.md
+++ b/学习流程记录.md
@@ -898,7 +898,7 @@ public class RedisConfig {
 
   - s
 
-  ![image-20210330093319168](C:\Users\10574\AppData\Roaming\Typora\typora-user-images\image-20210330093319168.png)
+  <img src="pictures\image-20210330093319168.png">"
 
 - s
 
