各种待研究的源码.md

--- a/各种待研究的源码.md
+++ b/各种待研究的源码.md
@@ -1,3 +1,11 @@
 Spring Cloud Feign相关
 
 <img src="pictures\Feign组成.png">
+
+com.alibaba.csp.sentinel.slots.block.degrade.DegradeRule.class
+com.alibaba.csp.sentinel.slots.block.flow.param.ParamFlowChecker
+com.alibaba.csp.sentinel.slots.system.SystemRuleManager
+com.alibaba.csp.sentinel.annotation.aspectjSentinelResourceAspect
+com.alibaba.cloud.sentinel.custom.SentinelBeanPostProcessor
+
+com.alibaba.cloud.sentinel.feign.SentinelFeign
