一些奇奇怪怪的小知识.md

--- a/一些奇奇怪怪的小知识.md
+++ b/一些奇奇怪怪的小知识.md
@@ -123,9 +123,13 @@ org.yaml.snakeyaml.error.YAMLException: java.nio.charset.MalformedInputException
 
 
 
+（8）分页请求后端需要注意对pageSize 的判断，以免恶意传入非常大的pageSize，影响系统性能。
+
+（9）idea搜不到插件
+
+点击“http proxy settings”，选择“Auto-detect proxy settings”
+
 
 
 api first与schema first（待看）
-
-
 
