小工具合集.md

--- a/小工具合集.md
+++ b/小工具合集.md
@@ -1,12 +1,24 @@
-idea插件--Statistic
+## idea插件--Statistic
 
 一款代码统计插件，可以统计代码中实际代码、注释等指标的行数。
 
-idea插件--Alibaba Java Coding Guidelines
+## idea插件--Alibaba Java Coding Guidelines
 
 依据阿里巴巴java开发手册，当代码中出现不符合规约的地方时，会给出提示。
 
-sonarqube--代码质量管理平台
+## sonarqube--代码质量管理平台
 
 http://www.imooc.com/article/291857  https://docs.sonarqube.org/latest/
+
+## 第三方微服务监控工具--spring boot admin
+
+## jvm监控工具？
+
+## GC日志/线程Dump日志/堆Dump可视化分析？
+
+GCEasy？
+
+## 日志监控
+
+ELK
 
