--- a/任务安排.md
+++ b/任务安排.md
@@ -5,3 +5,15 @@
 clickHouse官方教程，暂搁置
 
 > **如果面试手册看着犯困就看springcloud视频回顾知识，或者浏览一些文章补充新的知识点**
+
+2021-07-29计划
+
+写过的几个算法回顾一下
+
+双写一致性看完
+
+spring的一些概念
+
+看看写过的笔记
+
+208道面试题，有水分，挑着看看 
