--- a/面试记录.md
+++ b/面试记录.md
@@ -1,14 +1,60 @@
 #### 8/3 开太平 面的不好
 
-1. Mysql两种引擎的具体应用场景（我回答的是读频繁的场景，太泛了，要具体）
-2. Ioc底层原理？
-3. 定时器？分布式场景定时器怎么解决？一个挂了咋办？
-4. 怎么保证线程顺序执行？具体场景有什么？同时要调用多个微服务怎么处理顺序？一个个来？
-5. 多线程的具体应用场景和常见问题
-6. 大数据量的导入导出怎么处理？（导出excel甚至几百兆的那种）
-7. Redis场景？应该要针对本项目编几个读写场景，或者记几个说自己研究过 
-8. 项目中遇到的比较棘手的问题？回答的太含糊，需要找时间去总结一下。。。列个两三个场景，不行就编两三个。
-9. 自我介绍过程稍微多说点，教育背景、经历过的公司，公司的项目，简单介绍公司的业务，使用的技术。
-10. 框架小众，面试官没法就框架去问
-11. 那么个人技能那里写到的技能，就不能是停留在表面
-12. 多去看看实际的应用场景和遇到的问题。。。。。
+- [ ] Mysql两种引擎的具体应用场景（我回答的是读频繁的场景，太泛了，要具体）
+- [ ] Ioc底层原理？
+- [x] 定时器？分布式场景定时器怎么解决？一个挂了咋办？ 
+
+
+- 基本方向：多个相同实例的相同定时任务，保证只有一个定时任务在执行。同时要有阻塞机制，单个节点执行任务时宕机，要能够让阻塞队列中的某一个实例拿到锁执行任务。再者要避免重复执行，可选方案有对同一个任务对应的数据库记录加行锁，或者结合分布式锁。
+
+- 可选框架：
+  - ShedLock：对公用数据库的记录和加锁。
+    - 配合的注解：开启定时任务锁@EnableSchedulerLock，配置bean LockProvider，定时任务具体方法上的注解`@SchedulerLock(name="simpleTask",lockAtLeastFor = 1*1000)`
+  - Quartz：也是结合数据库实现。
+    - 基本流程：由SchedulerFactory创建Schedule调度器，由这个调度器去调取即将执行的trigger，找到对应的JobDetail信息，进而找的具体的job类去执行。
+    - Quartz中主要有两种线程：执行线程与调度线程。调度线程个负责调度任务，加入有即将出发的trigger，则从线程池取出一个线程作为执行线程去执行trigger所对应的job。
+  - Elastic Job：与zookeeper搭配使用
+
+- [ ] 怎么保证线程顺序执行？具体场景有什么？同时要调用多个微服务怎么处理顺序？一个个来？
+
+- [ ] 多线程的具体应用场景和常见问题
+
+- [ ] 大数据量的导入导出怎么处理？（导出excel甚至几百兆的那种）
+
+  核心思想是分批查询写入excel。如果有自增的id，根据id去拆分。
+
+- [ ] Redis场景？应该要针对本项目编几个读写场景，或者记几个说自己研究过 
+
+- [ ] 项目中遇到的比较棘手的问题？回答的太含糊，需要找时间去总结一下。。。列个两三个场景，不行就编两三个。
+
+- [ ] 自我介绍过程稍微多说点，教育背景、经历过的公司，公司的项目，简单介绍公司的业务，使用的技术。
+
+- [ ] 框架小众，面试官没法就框架去问
+
+   那么个人技能那里写到的技能，就不能是停留在表面
+
+- [ ] 多去看看实际的应用场景和遇到的问题。。。。。
+
+
+
+#### 8/10 天正聚合
+
+ 
+
+线程池的拒绝策略？
+
+Spring怎么解决循环依赖问题的？
+
+Spring装配机制？要多讲讲，主动去讲Autowired根据啥装配的，Resource根据啥装配的。
+
+ 
+
+#### 8/10 易宝
+
+1. Sql调优还要多讲讲，要记得去背总结了的那部分。。。。
+2. Mybatisplus 介绍一下？介绍+基础功能+为什么使用
+3. 你所理解的分布式？回答的太简单了，由于问题太大一时间没反应过来，讲一下微服务与分布式的却别，然后要带到springcloud上去。。。。。。
+4. 红黑树要讲一下大致的原理。。。不会写没关系。。。。不能只知道名字要多讲一些。。。。
+5. 你在项目中的价值？。。。这个还真的要认真去编一两个。。。。。一定要牵扯到技术！
+6. 项目中遇到的比较复杂的东西？
+
