各种待研究的源码

--- a/各种待研究的源码.md
+++ b/各种待研究的源码.md
@@ -15,3 +15,12 @@ com.alibaba.cloud.sentinel.feign.SentinelFeign
 网关过滤器流程
 
 org.springframework.cloud.gateway.filter.factory.RequestSizeGatewayFilterFactory
+
+
+
+springbean创建流程+循环依赖解决
+
+```
+org.springframework.beans.factory.support.DefaultSingletonBeanRegistry
+org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory
+```
